--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,19 +98,19 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/radioEnglish"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="English" />
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/radioCatalan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Català" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/radioSpanish"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Castellano" />
